--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "mainClass": "com.example.gradproject.GradProjectBackend",
       "projectName": "gradproject",
       "args": "",
-      "envFile": "${workspaceFolder}/.env"
+      "envFile": "${workspaceFolder}/secrets.properties"
     }
   ]
 }
