--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=todolist
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/todolist}
-spring.datasource.username=${DATABASE_USERNAME:springstudent}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
