--- a/secrets.properties.example
+++ b/secrets.properties.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=jdbc:mysql://localhost:3306/todolist
+DATABASE_URL=jdbc:mysql://localhost:3306/mdeical
 DATABASE_USERNAME=your_database_username
 DATABASE_PASSWORD=your_database_password
 
