--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-#server.port=3000
+server.port=3000
 
 # Mail Configuration (using environment variables)
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
