--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,10 @@ aws.accessKey=${AWS_ACCESS_KEY}
 aws.secretKey=${AWS_SECRET_KEY}
 aws.region=${AWS_REGION:eu-north-1}
 aws.s3.bucketName=${AWS_S3_BUCKET_NAME}
+
+# Redis Configuration
+spring.cache.type=redis
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+# spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.timeout=60000
