Added Refresh token with 30 day expiray and modified JWT to expire within 20 minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,8 @@ from.name=${FROM_NAME:Medical System Web Team}
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION:86400000}
+jwt.expiration=${JWT_EXPIRATION}
+jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
 # AWS S3 Configuration
 aws.accessKey=${AWS_ACCESS_KEY}
