Solved CORS error preventing Frontend from sending requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
-server.port=3000
+server.port=8080
 
 # Mail Configuration (using environment variables)
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
@@ -17,7 +17,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Application URLs
-frontend.url=${FRONTEND_URL:http://localhost:8080}
+frontend.url=${FRONTEND_URL}
 from.email=${FROM_EMAIL}
 from.name=${FROM_NAME:Medical System Web Team}
 
